# arc-solver

./: README.md  env.example  pyproject.toml  requirements.txt  test_notebook copy.ipynb  test_notebook.ipynb
data/training/: 0b17323b.json
src/: config.py  main.py  run.py
src/llms/: __init__.py  client.py
src/perception/: __init__.py  analyzer.py  differencer.py  objects.py  perceiver.py
src/solve/: __init__.py  prompt.py  solver.py
src/utils/: __init__.py
src/verification/: __init__.py  self_verifier.py  verifier.py
